--- a/meteo_app/Base.lproj/Main.storyboard
+++ b/meteo_app/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,6 +20,9 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="osX-qC-bsB"/>
+                    <connections>
+                        <segue destination="2Lr-rN-YjD" kind="show" identifier="Gotometeo" id="xm6-4I-UdU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -42,8 +46,139 @@
             </objects>
             <point key="canvasLocation" x="130.53435114503816" y="-27.464788732394368"/>
         </scene>
+        <!--Meteo Ctrl-->
+        <scene sceneID="q3e-th-1Mp">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="2Lr-rN-YjD" customClass="MeteoCtrl" customModule="meteo_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2Kz-2E-Fq3">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aAo-ng-cwg">
+                                <rect key="frame" x="0.0" y="0.0" width="398" height="852"/>
+                                <color key="backgroundColor" red="0.1535757941" green="0.57873366150000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="San Fransisco" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3P1-gT-LoZ">
+                                <rect key="frame" x="135" y="155" width="123" height="28"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sunday" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iky-ax-dFB">
+                                <rect key="frame" x="168.66666666666666" y="185" width="56" height="24"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sunny" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XeU-dC-I3R">
+                                <rect key="frame" x="173" y="371" width="47" height="24"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Par-oS-w3f">
+                                <rect key="frame" x="163" y="405" width="67" height="82"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="60"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="℃" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nR9-5B-ipe">
+                                <rect key="frame" x="232" y="448" width="20" height="24"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="01d" translatesAutoresizingMaskIntoConstraints="NO" id="SZd-j8-vaF">
+                                <rect key="frame" x="121.66666666666669" y="219" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="8tt-Gn-XcR"/>
+                                    <constraint firstAttribute="width" constant="150" id="gpX-R5-yij"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NbT-5F-ucg">
+                                <rect key="frame" x="10" y="492" width="373" height="335"/>
+                                <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="srP-hW-jSG">
+                                        <rect key="frame" x="10" y="10" width="353" height="128"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="Q9e-2l-Icu"/>
+                                        </constraints>
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ate-kE-FxL">
+                                            <size key="itemSize" width="80" height="120"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Customcellprevision" id="EoG-Oh-IQE">
+                                                <rect key="frame" x="0.0" y="4" width="80" height="120"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="iTi-mM-hQW">
+                                                    <rect key="frame" x="0.0" y="0.0" width="80" height="120"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </collectionViewCellContentView>
+                                            </collectionViewCell>
+                                        </cells>
+                                    </collectionView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7aI-d0-19O">
+                                        <rect key="frame" x="0.0" y="138" width="373" height="197"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="7aI-d0-19O" secondAttribute="trailing" id="2B1-E0-cV4"/>
+                                    <constraint firstItem="srP-hW-jSG" firstAttribute="leading" secondItem="NbT-5F-ucg" secondAttribute="leading" constant="10" id="7sj-RM-c1e"/>
+                                    <constraint firstAttribute="trailing" secondItem="srP-hW-jSG" secondAttribute="trailing" constant="10" id="Lsr-Ng-tpg"/>
+                                    <constraint firstAttribute="bottom" secondItem="7aI-d0-19O" secondAttribute="bottom" id="O2G-dn-T1B"/>
+                                    <constraint firstItem="srP-hW-jSG" firstAttribute="centerX" secondItem="NbT-5F-ucg" secondAttribute="centerX" id="Tf7-0F-szl"/>
+                                    <constraint firstItem="7aI-d0-19O" firstAttribute="top" secondItem="srP-hW-jSG" secondAttribute="bottom" id="nTX-Ng-IAl"/>
+                                    <constraint firstItem="7aI-d0-19O" firstAttribute="leading" secondItem="NbT-5F-ucg" secondAttribute="leading" id="sGP-2H-NX6"/>
+                                    <constraint firstItem="srP-hW-jSG" firstAttribute="top" secondItem="NbT-5F-ucg" secondAttribute="top" constant="10" id="tSR-aG-Kr3"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="xua-Bw-KVI"/>
+                        <constraints>
+                            <constraint firstItem="aAo-ng-cwg" firstAttribute="bottom" secondItem="xua-Bw-KVI" secondAttribute="bottom" constant="34" id="1Dk-E4-B31"/>
+                            <constraint firstItem="NbT-5F-ucg" firstAttribute="top" secondItem="nR9-5B-ipe" secondAttribute="bottom" constant="20" id="2cf-H9-eKD"/>
+                            <constraint firstItem="aAo-ng-cwg" firstAttribute="trailing" secondItem="xua-Bw-KVI" secondAttribute="trailing" constant="5" id="CI3-dx-66w"/>
+                            <constraint firstItem="SZd-j8-vaF" firstAttribute="top" secondItem="Iky-ax-dFB" secondAttribute="bottom" constant="10" id="FKi-l7-LCM"/>
+                            <constraint firstItem="nR9-5B-ipe" firstAttribute="leading" secondItem="Par-oS-w3f" secondAttribute="trailing" constant="2" id="GsD-MH-Y2v"/>
+                            <constraint firstItem="3P1-gT-LoZ" firstAttribute="centerX" secondItem="2Kz-2E-Fq3" secondAttribute="centerX" id="K89-EP-DyX"/>
+                            <constraint firstItem="nR9-5B-ipe" firstAttribute="top" secondItem="Par-oS-w3f" secondAttribute="bottom" constant="-39" id="NW1-y9-kyE"/>
+                            <constraint firstItem="3P1-gT-LoZ" firstAttribute="top" secondItem="xua-Bw-KVI" secondAttribute="top" id="Th3-P1-Ghh"/>
+                            <constraint firstItem="Iky-ax-dFB" firstAttribute="top" secondItem="3P1-gT-LoZ" secondAttribute="bottom" constant="2" id="UmB-3F-MZC"/>
+                            <constraint firstItem="Par-oS-w3f" firstAttribute="centerX" secondItem="2Kz-2E-Fq3" secondAttribute="centerX" id="XAI-L6-WnZ"/>
+                            <constraint firstItem="NbT-5F-ucg" firstAttribute="trailing" secondItem="xua-Bw-KVI" secondAttribute="trailing" constant="-10" id="Zoz-C6-78e"/>
+                            <constraint firstItem="XeU-dC-I3R" firstAttribute="top" secondItem="SZd-j8-vaF" secondAttribute="bottom" constant="2" id="aoZ-cy-dPB"/>
+                            <constraint firstAttribute="bottom" secondItem="NbT-5F-ucg" secondAttribute="bottom" constant="25" id="giG-Ca-jpx"/>
+                            <constraint firstItem="aAo-ng-cwg" firstAttribute="leading" secondItem="xua-Bw-KVI" secondAttribute="leading" id="i8B-vx-ygE"/>
+                            <constraint firstItem="SZd-j8-vaF" firstAttribute="centerX" secondItem="2Kz-2E-Fq3" secondAttribute="centerX" id="kPk-Ff-B29"/>
+                            <constraint firstItem="Iky-ax-dFB" firstAttribute="centerX" secondItem="2Kz-2E-Fq3" secondAttribute="centerX" id="lBf-nq-iMN"/>
+                            <constraint firstItem="NbT-5F-ucg" firstAttribute="leading" secondItem="xua-Bw-KVI" secondAttribute="leading" constant="10" id="ngd-Cd-PoO"/>
+                            <constraint firstItem="aAo-ng-cwg" firstAttribute="top" secondItem="2Kz-2E-Fq3" secondAttribute="top" id="rDz-Pi-cUL"/>
+                            <constraint firstItem="Par-oS-w3f" firstAttribute="top" secondItem="XeU-dC-I3R" secondAttribute="bottom" constant="10" id="rK9-iM-dhH"/>
+                            <constraint firstItem="XeU-dC-I3R" firstAttribute="centerX" secondItem="2Kz-2E-Fq3" secondAttribute="centerX" id="zel-Qq-FHw"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="gHt-td-IDC"/>
+                    <connections>
+                        <outlet property="DescripLabel" destination="XeU-dC-I3R" id="OwL-j2-k7v"/>
+                        <outlet property="Img" destination="SZd-j8-vaF" id="U8Y-qm-0eJ"/>
+                        <outlet property="TempLabel" destination="Par-oS-w3f" id="RsV-Dx-yy4"/>
+                        <outlet property="Villelabel" destination="3P1-gT-LoZ" id="B3G-Oh-H1A"/>
+                        <outlet property="dayLabel" destination="Iky-ax-dFB" id="lza-qZ-EB3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UZE-jb-J5r" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1810" y="-27"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="01d" width="50" height="50"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
